# seed

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  APPLETS-TODO.md  APPLETS.md  Cargo.toml  DOCS-TODO.md  Dockerfile  Dockerfile.alpine-dev  Dockerfile.alpine-release  Makefile  NOTES.md  PLAN.md  PROGRESS.md  REFACTOR.md  T1-STABILIZATION.md  TODO-bc-gawk.md  TODO.md  docker-compose.yml  rust-toolchain.toml
.github/workflows/: release-wget.yml  release.yml
docs/man/: [.1  [[.1  acpid.1  addgroup.1  adduser.1  awk.1  base32.1  base64.1  basename.1  blkid.1  bunzip2.1  bzcat.1  bzip2.1  cat.1  chattr.1  chgrp.1  chmod.1  chown.1  chroot.1  cmp.1  cp.1  cpio.1  cut.1  date.1  dd.1  delgroup.1  deluser.1  depmod.1  df.1  diff.1  dirname.1  dmesg.1  du.1  echo.1  egrep.1  env.1  expr.1  false.1  fdisk.1  fgrep.1  (+132 more)
src/: applet_list.rs  lib.rs  main.rs  tar_doc.rs  wget.rs  wget_doc.rs
src/applets/: acpid.rs  addgroup.rs  adduser.rs  awk.rs  base64.rs  basename.rs  blkid.rs  bzip2.rs  cat.rs  chattr.rs  chgrp.rs  chmod.rs  chown.rs  chroot.rs  cmp.rs  compression.rs  cp.rs  cpio.rs  cut.rs  date.rs  dd.rs  delgroup.rs  deluser.rs  depmod.rs  df.rs  diff.rs  dmesg.rs  du.rs  echo.rs  env.rs  expr.rs  fdisk.rs  find.rs  flock.rs  fold.rs  free.rs  fsck.rs  getopt.rs  getty.rs  grep.rs  (+110 more)
src/common/: account.rs  applet.rs  args.rs  dhcp.rs  doc.rs  error.rs  extattr.rs  fs.rs  fstab.rs  help.rs  io.rs  mod.rs  modules.rs  mounts.rs  net.rs  process.rs  runtime.rs  test_env.rs  unix.rs
src/common/net/: state.rs
tests/: run-applet-tests.sh  run-linux-init.sh  run-linux-phase7b.sh  run-tier1-stabilization.sh
tests/busybox/: od.tests
tests/busybox/acpid/: acpid-directory-handler-uses-run-parts  acpid-runs-direct-handler-from-proc-events
tests/busybox/addgroup/: addgroup-adds-user-to-existing-group  addgroup-creates-group
tests/busybox/adduser/: adduser-adds-existing-user-to-group  adduser-creates-user-group-shadow-and-home  adduser-supports-existing-primary-group
tests/busybox/awk/: awk-begin-if-comparisons-work  awk-begin-sees-empty-record-fields  awk-bitwise-or-and-hex-octal-constants-work  awk-boolean-operators-work  awk-break-else-parses  awk-classic-for-loop-works  awk-concatenation-is-not-a-function-call  awk-continue-else-parses  awk-delete-array-postdecrement-evaluates-once  awk-delete-missing-arg-errors  awk-do-while-works  awk-e-loads-program-snippet  awk-empty-function-noargs-works  awk-exit-status-works  awk-f-dash-and-argc-work  awk-f-loads-program-file  awk-field-separator-handles-hex-escape  awk-field-separator-regex-counts-fields  awk-fs-assignment-works  awk-function-return-value-works  awk-getline-expression-reads-current-input  awk-getline-expression-reads-file  awk-getline-file-source-expression-works  awk-getline-nonexistent-file-sets-errno  awk-getline-reads-current-input  awk-gsub-falls-back-to-basic-regex  awk-input-is-never-octal  awk-large-integer-and-int-work  awk-length-array-works  awk-length-value-and-function-work  awk-long-field-separator-and-length-work  awk-negative-field-access-errors  awk-nested-for-in-loops-with-same-variable-work  awk-next-skips-rest-of-action  awk-nextfile-skips-to-next-input  awk-plus-assign-works  awk-printf-floating-constants-work  awk-regex-match-operators-work  awk-regex-rule-pattern-works  awk-split-regex-literal-works  (+8 more)
tests/busybox/basename/: basename-multiple-names  basename-strips-suffix  dirname-basic
tests/busybox/cmp/: cmp-reads-stdin  (+3 more)
tests/linux/: Dockerfile.phase7b  init-hardening.sh  phase7b-applets.sh  phase7b-smoke.sh
(+430 files in other folders)
