[package]
name = "seed"
version = "0.1.0"
edition = "2024"
autobins = false

[features]
default = ["multicall", "wget"]
multicall = []
docgen = []
wget = ["dep:rustls", "dep:ureq"]

[[bin]]
name = "seed"
path = "src/main.rs"
required-features = ["multicall"]

[[bin]]
name = "wget"
path = "src/bin/wget.rs"
required-features = ["wget"]

[[bin]]
name = "seed-docgen"
path = "src/bin/seed-docgen.rs"
required-features = ["docgen"]

[dependencies]
bzip2 = { version = "0.5.2", features = ["static"] }
diffy = "0.4.2"
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
flate2 = { version = "1.1.9", default-features = false, features = ["miniz_oxide"] }
lexopt = "0.3.2"
libc = "0.2.184"
lzma-rust2 = { version = "0.16.2", default-features = false, features = ["std", "encoder", "xz"] }
rustls = { version = "0.23.37", optional = true, default-features = false, features = ["std", "tls12", "ring"] }
tar = { version = "0.4.44", default-features = false }
ureq = { version = "3.3.0", optional = true, default-features = false, features = ["rustls-no-provider", "platform-verifier"] }
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }

[profile.dev]
debug = "line-tables-only"
split-debuginfo = "unpacked"

[profile.dev.package."*"]
opt-level = 2

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.release-wget]
inherits = "release"
opt-level = "z"
